crates/test-files/fixtures/compile_errors/call_event_with_wrong_types.fe
contract Foo:
    event MyEvent:
        val_1: String<5>
        idx val_2: u8

    pub fn foo():
        emit MyEvent("foo bar", 1000)
